Fixes in Class2 code

--- a/Class2/Class2_Classifiers_Evaluation.ipynb
+++ b/Class2/Class2_Classifiers_Evaluation.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "DATA_SET=pd.read_fwf(\"http://archive.ics.uci.edu/ml/machine-learning-databases/statlog/german/german.data-numeric\", header = None)\n",
     "DATA_SET.rename(columns = {24: \"target\"}, inplace=True)\n",
-    "DATA_SET['target'] = 2 - DATA_SET['target'] #recoding target variable"
+    "DATA_SET['target'] = DATA_SET['target'] - 1 #recoding target variable"
    ]
   },
   {
@@ -280,8 +280,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_val = cutoff_analysis(y_test, score_val, cost_matrix = np.array([[0,5],[1,0]]))\n",
-    "cost_train = cutoff_analysis(y_train, score_train, cost_matrix = np.array([[0,5],[1,0]]))"
+    "cost_val = cutoff_analysis(y_test, score_val, cost_matrix = np.array([[0,1],[5,0]]))\n",
+    "cost_train = cutoff_analysis(y_train, score_train, cost_matrix = np.array([[0,1],[5,0]]))"
    ]
   },
   {
@@ -886,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
