--- a/Class4/Class4_CART_RandomForest.ipynb
+++ b/Class4/Class4_CART_RandomForest.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"./Class4_data.csv\")\n",
+    "dataset = pd.read_csv(\"https://raw.githubusercontent.com/KrainskiL/SLM_S1920/master/Class4/Class4_data.csv\")\n",
     "dataset.head()"
    ]
   },
@@ -731,7 +731,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
