--- a/Class5/Class5_Deep_Learning.ipynb
+++ b/Class5/Class5_Deep_Learning.ipynb
@@ -130,7 +130,8 @@
     "from keras.layers import Dense, Flatten, Conv2D, Dropout, MaxPooling2D\n",
     "import plotly.graph_objs as go\n",
     "from plotly import subplots\n",
-    "from plotly.offline import iplot"
+    "from plotly.offline import iplot\n",
+    "import pydot"
    ]
   },
   {
@@ -614,7 +615,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
