Header change in Class3 notebooks

--- a/Class3/Class3_R_Nonparametric_models.ipynb
+++ b/Class3/Class3_R_Nonparametric_models.ipynb
@@ -11,13 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Statistical Learning Methods**\n",
-    "\n",
-    "**Author:** Łukasz Kraiński \n",
-    "\n",
-    "**Email:** lukasz.krainski123@gmail.com\n",
-    "\n",
-    "[Repository](https://github.com/KrainskiL/SLM_S1920/Class3)"
+    "**Statistical Learning Methods**"
    ]
   },
   {
