--- a/Class3/Class3_Python_Nonparametric_methods.ipynb
+++ b/Class3/Class3_Python_Nonparametric_methods.ipynb
@@ -11,13 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Statistical Learning Methods**\n",
-    "\n",
-    "**Author:** Łukasz Kraiński \n",
-    "\n",
-    "**Email:** lukasz.krainski123@gmail.com\n",
-    "\n",
-    "[Repository](https://github.com/KrainskiL/SLM_S1920/Class3)"
+    "**Statistical Learning Methods**"
    ]
   },
   {
@@ -1630,7 +1624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
